--- a/packages/wingsuit/source/default/_patterns/02-molecules/menu/_menu--primary.twig
+++ b/packages/wingsuit/source/default/_patterns/02-molecules/menu/_menu--primary.twig
@@ -15,7 +15,7 @@
   'flex flex-col md:flex-row md:items-center',
 ]) | sort | join(' ') | trim  %}
 {# Defaults: #}
-{% set attributes = attributes|default(attributes_object()).addClass(classes) %}
+{% set attributes = attributes|default(create_attribute()).addClass(classes) %}
 
 <nav class="flex flex-col" role="navigation">
   <ul {{ attributes }} >
