--- a/packages/wingsuit/source/default/_patterns/03-organisms/grid/_grid.twig
+++ b/packages/wingsuit/source/default/_patterns/03-organisms/grid/_grid.twig
@@ -74,8 +74,8 @@
     'mx-auto flex flex-wrap',
     gap == true ? '-px-10 md:-px-25': '',
   ] | sort | join(' ') | trim %}
-  {% set attributes = attributes|default(attributes_object()).addClass(grid__classes) %}
-  {% set wrapper__attributes = wrapper__attributes|default(attributes_object()).addClass(wrapper__classes) %}
+  {% set attributes = attributes|default(create_attribute()).addClass(grid__classes) %}
+  {% set wrapper__attributes = wrapper__attributes|default(create_attribute()).addClass(wrapper__classes) %}
 
   {%- set column_1 -%}{%- block column_1 -%}{{ _context['column_1' ] }}{% endblock %}{% endset %}
   {%- set column_2 -%}{%- block column_2 -%}{{ _context['column_2' ] }}{% endblock %}{% endset %}
