Add svg loader.

--- a/packages/wingsuit/source/default/_patterns/01-atoms/svg/_svg--icon.twig
+++ b/packages/wingsuit/source/default/_patterns/01-atoms/svg/_svg--icon.twig
@@ -20,6 +20,6 @@
 ]) | sort | join(' ') | trim %}
 <div class="{{ svg_classes }}">
   <svg viewBox="0 0 500 500">
-    <use xlink:href="{{ file_url('wsdist://assets/images/spritemap.svg') }}?{{ ws_itok() }}#{{ icon }}"></use>
+    <use xlink:href="{{ file_url('wsdist://images/spritemap.svg') }}?{{ ws_itok() }}#{{ icon }}"></use>
   </svg>
 </div>
