Add font support.

--- a/packages/wingsuit/source/default/tokens/tokens.css
+++ b/packages/wingsuit/source/default/tokens/tokens.css
@@ -1,5 +1,18 @@
+@font-face {
+  font-family: 'SourceSans';
+  src: url('fonts/source-sans/SourceSerifPro-Regular.woff') format('woff'),
+  url('fonts/source-sans/SourceSerifPro-Regular.woff2') format('woff2');
+  font-display: auto;
+  font-weight: 400;
+}
+
+body {
+  font-family: 'SourceSans';
+}
+
 @tailwind base;
 
 @tailwind components;
 
 @tailwind utilities;
+
