--- a/packages/wingsuit/source/default/patterns/02-molecules/menu/menu.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/menu/menu.twig
@@ -10,7 +10,7 @@
 #}
 
 {% if variant == "primary" %}
-  {% include '@molecules/menu/_menu--primary.twig' with {variant: 'primary', items: menu_primary.items} %}
+  {% include '@molecules/menu/_menu--primary.twig' with {variant: 'primary', items: items} %}
 {% elseif variant == "footer" %}
   {% include '@molecules/menu/_menu--footer.twig' with {variant: 'footer', items: menu_footer.items} %}
 {% endif %}
