--- a/packages/wingsuit/source/default/_patterns/02-molecules/menu/_menu--footer.twig
+++ b/packages/wingsuit/source/default/_patterns/02-molecules/menu/_menu--footer.twig
@@ -12,13 +12,16 @@
 {# Classes: #}
 {% set classes = classes|default([])|merge([
   variant == 'footer',
+  'flex flex-col md:flex-row md:items-center justify-center',
 ]) | sort | join(' ') | trim  %}
 {# Defaults: #}
 {% set attributes = attributes|default(create_attribute()).addClass(classes) %}
-
-<div class="w-full">
-  <div class="max-w-container flex justify-between">
-    <div class="">{{ copy_right }}</div>
-    <div class="" >{{ menu_footer }}</div>
-  </div>
-</div>
+<nav class="flex flex-col justify-center m-auto md:m-0" role="navigation">
+  <ul {{ attributes }} >
+    {% for item in items %}
+      <li class="font-sans px-4 pt-4 lg:text-center lg:border-b-0 lg:p-2 lg:px-4 uppercase border-b-0 font-sans text-gray-dark">
+        <a class="hover:border-b text-base" href="{{ item.link }}">{{ item.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
+</nav>
