--- a/packages/wingsuit/apps/storybook/_patterns/05-pages/article.twig
+++ b/packages/wingsuit/apps/storybook/_patterns/05-pages/article.twig
@@ -1,1 +1,88 @@
-{{ pattern_preview('card', 'default',{ preheadline: 'XXXX'}) }}
+{# This pattern can be embedded directly by Drupal.
+ # Overwrite the blocks and be happy.
+ #}
+{% set content %}
+  <div class="max-w-container px-4 m-auto">
+    {% embed '@molecules/card/_card.twig' with {
+      variant: 'horizontal',
+      headline: 'Card title ',
+      text: 'It’s grown to become something of an artform, and there are countless filler text generators sprinkled around the web that provide a modern take on this classic staple of the design industry.',
+      button: 'more',
+    }  only %}
+      {% block image %}
+        {% include "@atoms/image/_image.twig" with {
+          id: image,
+          variant: 'primary',
+          src: 'https://picsum.photos/1000/1100',
+        } %}
+      {% endblock %}
+    {% endembed %}
+    <div class="block md:flex pt-10">
+      <div class="w-full md:w-1/3 pr-2">
+        {% embed '@molecules/card/_card.twig' with {
+          variant: 'rectangle',
+        } only %}
+          {% block image %}
+            {% include "@atoms/image/_image.twig" with {
+              id: image,
+              variant: 'primary',
+              src: 'https://picsum.photos/800/400',
+            } %}
+          {% endblock %}
+        {% endembed %}
+      </div>
+      <div class="w-full md:w-1/3 px-2">
+        {% embed '@molecules/card/_card.twig' with {
+          variant: 'circle',
+        } only %}
+          {% block image %}
+            {% include "@atoms/image/_image.twig" with {
+              variant: 'primary',
+              src: 'https://picsum.photos/800/400',
+            } %}
+          {% endblock %}
+        {% endembed %}
+      </div>
+      <div class="w-full md:w-1/3 pl-2">
+        {% embed '@molecules/card/_card.twig' with {
+          variant: 'rectangle',
+        } only %}
+          {% block image %}
+            {% include "@atoms/image/_image.twig" with {
+              id: image,
+              variant: 'primary',
+              src: 'https://picsum.photos/800/400',
+            } %}
+          {% endblock %}
+        {% endembed %}
+      </div>
+    </div>
+  </div>
+{% endset %}
+
+{% embed '@organisms/header/_header.twig' %}
+  {% block burger_menu %}
+    {% include '@atoms/svg/_svg--icon.twig' with {"icon": "menu", "size": "w-7"} %}
+  {% endblock %}
+  {% block logo %}
+    {% include "@atoms/image/_image.twig" with {
+      variant: 'primary',
+      src: paths.images ~ '/dump.png',
+    } %}
+  {% endblock %}
+  {% block menu %}
+    {% include '@molecules/menu/_menu.twig' with {items: wingsuit.primary_menu.items, variant: 'primary'} %}
+  {% endblock %}
+{% endembed %}
+
+<main class="main-content w-full py-10 mt-20">
+  {% block content %}
+    {{ content }}
+  {% endblock %}
+</main>
+
+{% embed '@organisms/footer/_footer.twig' %}
+  {% block footer_menu %}
+    {% include '@molecules/menu/_menu.twig' with {items: wingsuit.footer_menu.items, variant: 'footer'} %}
+  {% endblock %}
+{% endembed %}
