--- a/packages/wingsuit/source/default/_patterns/02-molecules/menu/_menu.twig
+++ b/packages/wingsuit/source/default/_patterns/02-molecules/menu/_menu.twig
@@ -12,5 +12,5 @@
 {% if variant == "primary" %}
   {% include '@molecules/menu/_menu--primary.twig' with {variant: 'primary', items: items} %}
 {% elseif variant == "footer" %}
-  {% include '@molecules/menu/_menu--footer.twig' with {variant: 'footer', items: menu_footer.items} %}
+  {% include '@molecules/menu/_menu--footer.twig' with {variant: 'footer', items: items} %}
 {% endif %}
