--- a/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
@@ -9,7 +9,7 @@
  */
 #}
 
-<nav class="z-50 h-20 fixed w-full bg-green border-b lg:border-b-0 border-gray-xlight" role="navigation" x-data="{ open: false }">
+<nav class="z-50 h-20 fixed w-full bg-green border-b lg:border-b-0 border-gray-xlight top-0" role="navigation" x-data="{ open: false }">
   <div class="max-w-container mx-auto p-6 lg:py-6 lg:px-2 justify-between relative flex flex-wrap items-center md:flex-no-wrap">
     <a href="{{ path('<front>') }}" class="mr-4 w-155 lg:mr-3">
       {% block logo %}
