Add yo generator.

--- a/packages/wingsuit/source/default/_patterns/04-templates/cc/_cc.twig
+++ b/packages/wingsuit/source/default/_patterns/04-templates/cc/_cc.twig
@@ -1,14 +1,14 @@
 {#
 /**
  * @file
- * <%= name %>
+ * cc
  *
- * See <%= name %>.wingsuit.yaml for documentation.
+ * See cc.wingsuit.yaml for documentation.
  */
 #}
 
 <div>
-  <h1><%= name %></h1>
+  <h1>cc</h1>
   <div>Server component!</div>
   <div>Field variable: <code>{{ field_1 }}</code></div>
   <div>Setting variable: <code>{{ setting_1 }}</code></div>
