--- a/packages/wingsuit/apps/storybook/patterns/03-organisms/header/header.twig
+++ b/packages/wingsuit/apps/storybook/patterns/03-organisms/header/header.twig
@@ -9,6 +9,6 @@
     } %}
   {% endblock %}
   {% block menu %}
-    {% include '@molecules/menu/_menu.twig' with {items: wingsuit.primary_menu.items, variant: 'primary'} %}
+    {% include '@molecules/menu/menu.twig' with {items: wingsuit.primary_menu.items, variant: 'primary'} %}
   {% endblock %}
 {% endembed %}
