--- a/packages/wingsuit/apps/storybook/_patterns/05-pages/article/article.twig
+++ b/packages/wingsuit/apps/storybook/_patterns/05-pages/article/article.twig
@@ -4,17 +4,18 @@
 {% set content %}
   <div class="max-w-container px-4 m-auto">
     <div class="text-center w-1/2 m-auto pb-8 text-gray-dark">{{ "Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups." }}</div>
+    {{ dump(icon) }}
     {% embed '@molecules/card/_card.twig' with {
       variant: 'horizontal',
       headline: 'Card title ',
       text: 'It’s grown to become something of an artform, and there are countless filler text generators sprinkled around the web that provide a modern take on this classic staple of the design industry.',
       button: 'more',
+      icon: ['facebook-outline']
     }  only %}
       {% block image %}
         {% include "@atoms/image/_image.twig" with {
-          id: image,
-          variant: 'primary',
-          src: 'https://picsum.photos/1000/1100',
+          placeholder: true,
+          style: '16x9_xs_sc'
         } %}
       {% endblock %}
     {% endembed %}
@@ -25,9 +26,8 @@
         } only %}
           {% block image %}
             {% include "@atoms/image/_image.twig" with {
-              id: image,
-              variant: 'primary',
-              src: 'https://picsum.photos/800/400',
+              placeholder: true,
+              style: '16x9_xs_sc'
             } %}
           {% endblock %}
         {% endembed %}
@@ -35,11 +35,12 @@
       <div class="w-full md:w-1/3 px-2">
         {% embed '@molecules/card/_card.twig' with {
           variant: 'circle',
+          circle: true
         } only %}
           {% block image %}
             {% include "@atoms/image/_image.twig" with {
-              variant: 'primary',
-              src: 'https://picsum.photos/800/400',
+              placeholder: true,
+              style: '16x9_xs_sc'
             } %}
           {% endblock %}
         {% endembed %}
@@ -50,9 +51,8 @@
         } only %}
           {% block image %}
             {% include "@atoms/image/_image.twig" with {
-              id: image,
-              variant: 'primary',
-              src: 'https://picsum.photos/800/400',
+              placeholder: true,
+              style: '16x9_xs_sc'
             } %}
           {% endblock %}
         {% endembed %}
