Refactor twig renderer..

--- a/packages/wingsuit/apps/storybook/patterns/03-organisms/footer/footer.twig
+++ b/packages/wingsuit/apps/storybook/patterns/03-organisms/footer/footer.twig
@@ -1,5 +1,5 @@
-{% embed '@organisms/footer/_footer.twig' %}
+{% embed '@organisms/footer/footer.twig' %}
   {% block footer_menu %}
-    {% include '@molecules/menu/_menu.twig' with {items: wingsuit.footer_menu.items, variant: 'footer'} %}
+    {% include '@molecules/menu/menu.twig' with {items: wingsuit.footer_menu.items, variant: 'footer'} %}
   {% endblock %}
 {% endembed %}
