--- a/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -1,42 +1,28 @@
 {# This pattern can be embedded directly by Drupal.
  # Overwrite the blocks and be happy.
  #}
-{% set content %}
-  <div class="max-w-container px-4 m-auto">
-    <div class="text-center w-1/2 m-auto pb-8 text-gray-dark">{{ "Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups." }}</div>
-    <div class="block md:flex pt-10">
-      <div class="w-full md:w-1/3 pr-2">
-        {{ pattern_preview('card', 'rectangle') }}
-      </div>
-      <div class="w-full md:w-1/3 px-2">
-        {{ pattern_preview('card', 'circle') }}
-      </div>
-      <div class="w-full md:w-1/3 pl-2">
-        {{ pattern_preview('card', 'rectangle') }}
-      </div>
-    </div>
-  </div>
-{% endset %}
-
 {% embed '@organisms/header/header.twig' %}
-  {% block burger_menu %}
-    {% include '@atoms/svg/_svg--icon.twig' with {"icon": "menu", "size": "w-7"} %}
-  {% endblock %}
-  {% block logo %}
-    {% include "@atoms/image/image.twig" with {
-      variant: 'primary',
-      placeholder: false,
-      src: file_url('ws-assets://images/dummy.png') ,
-    } %}
-  {% endblock %}
   {% block menu %}
-    {% include '@molecules/menu/menu.twig' with {items: wingsuit.primary_menu.items, variant: 'primary'} %}
+    {% include '@molecules/menu/menu.twig' with {items: primary_menu.items, variant: 'primary'} %}
   {% endblock %}
 {% endembed %}
 
 <main class="main-content w-full py-10 mt-20">
   {% block content %}
-    {{ content }}
+    <div class="max-w-container px-4 m-auto">
+      <div class="text-center w-1/2 m-auto pb-8 text-gray-dark">{{ "Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups." }}</div>
+      <div class="block md:flex pt-10">
+        <div class="w-full md:w-1/3 pr-2">
+          {{ pattern_preview('card', 'rectangle') }}
+        </div>
+        <div class="w-full md:w-1/3 px-2">
+          {{ pattern_preview('card', 'circle') }}
+        </div>
+        <div class="w-full md:w-1/3 pl-2">
+          {{ pattern_preview('card', 'rectangle') }}
+        </div>
+      </div>
+    </div>
   {% endblock %}
 </main>
 
