WS #00: total updates,

--- a/packages/wingsuit/apps/storybook/patterns/03-organisms/header/header.twig
+++ b/packages/wingsuit/apps/storybook/patterns/03-organisms/header/header.twig
@@ -1,5 +1,5 @@
 {% embed '@organisms/header/header.twig' %}
   {% block menu %}
-    {% include '@molecules/menu/menu.twig' with {items: wingsuit.primary_menu.items, variant: 'primary'} %}
+    {% include '@molecules/menu/menu.twig' with {items: primary_menu.items, variant: 'primary'} %}
   {% endblock %}
 {% endembed %}
