--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
@@ -1,20 +1,15 @@
-{% set button_element = button_element|default('div') %}
-{% set button_attributes = button_attributes|default(create_attribute()) %}
-{% set button_svg_size = button_svg_size|default('default') %}
+{% set element = element|default('div') %}
+{% set attributes = attributes|default(create_attribute()) %}
+{% set svg_size = svg_size|default('default') %}
 
 {% if url is not empty %}
-  {% set button_attributes = button_attributes.setAttribute('href', url) %}
-  {% set button_element = 'a' %}
+  {% set attributes = attributes.setAttribute('href', url) %}
+  {% set element = 'a' %}
 {% endif %}
-{%- set button_content = button_content|render -%}
+{%- set content = content|render -%}
 
-<{{ button_element }} {{ button_attributes.addClass([
-  'px-4',
-  'py-2',
-  'leading-18',
-  'font-bold',
-  'uppercase',
-  'inline-block',
+<{{ element }} {{ attributes.addClass([
+  'px-4', 'py-2', 'leading-18', 'font-serif', 'uppercase', 'inline-block',
   variant == 'primary' ? 'bg-primary text-white',
   variant == 'secondary' ? 'bg-secondary text-white',
   variant == 'success' ? 'bg-success text-white',
@@ -22,13 +17,13 @@
   variant == 'disabled' ? 'bg-disabled text-gray-xmedium',
   color,
 ] | sort | join(' ') | trim) }}>
-{{ button_content|striptags }}
-  {% if button_svg is not empty %}
+{{ content|striptags }}
+  {% if svg is not empty %}
 
     {% include "@atoms/svg/_svg--icon.twig" with {
-      icon: button_svg,
-      size: {default: 'w-15', large: 'w-24'}[button_svg_size],
-      svg_classes: ['inline-block', 'align-middle', button_content|striptags ? 'ml-15', variant == 'outline' ? 'fill-red' : 'fill-white']
+      icon: svg,
+      size: {default: 'w-15', large: 'w-24'}[svg_size],
+      svg_classes: ['inline-block', 'align-middle', content|striptags ? 'ml-15', variant == 'outline' ? 'fill-red' : 'fill-white']
     } %}
   {% endif %}
-</{{ button_element }}>
+</{{ element }}>
