--- a/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
@@ -1,66 +1,45 @@
-{% set content %}
-  <div class="max-w-container px-4 m-auto">
-    <div class="text-center w-1/2 m-auto pb-8 text-gray-dark">{{ "Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups." }}</div>
-    {{ pattern_preview('card', 'horizontal', {
-      headline: 'Card title',
-      button: 'more',
-    }) }}
-    <div class="block md:flex pt-10">
-      <div class="w-full md:w-1/3 pr-2">
-        {% embed '@molecules/card/card.twig' with {
-          variant: 'rectangle',
-        } only %}
-          {% block image %}
-            {% include "@atoms/image/image.twig" with {
-              placeholder: true,
-              style: '16x9_xs_sc'
-            } %}
-          {% endblock %}
-        {% endembed %}
-      </div>
-      <div class="w-full md:w-1/3 px-2">
-        {% embed '@molecules/card/card.twig' with {
-          variant: 'circle',
-          circle: true
-        } only %}
-          {% block image %}
-            {% include "@atoms/image/image.twig" with {
-              placeholder: true,
-              style: '16x9_xs_sc'
-            } %}
-          {% endblock %}
-        {% endembed %}
-      </div>
-      <div class="w-full md:w-1/3 pl-2">
-        {% embed '@molecules/card/card.twig' with {
-          variant: 'rectangle',
-        } only %}
-          {% block image %}
-            {% include "@atoms/image/image.twig" with {
-              placeholder: true,
-              style: '16x9_xs_sc'
-            } %}
-          {% endblock %}
-        {% endembed %}
-      </div>
-    </div>
-  </div>
-{% endset %}
-
 {% embed '@organisms/header/header.twig' %}
   {% block menu %}
-    {% include '@molecules/menu/menu.twig' with {items: wingsuit.primary_menu.items, variant: 'primary'} %}
+    {% include '@molecules/menu/menu.twig' with {items: primary_menu.items, variant: 'primary'} %}
   {% endblock %}
 {% endembed %}
 
 <main class="main-content w-full py-10 mt-20">
   {% block content %}
-    {{ content }}
+    {% embed '@templates/article/article.twig' with {
+      headline: 'Card Headline',
+      text: 'Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.'
+    } %}
+      {% block image %}
+        {% include "@atoms/image/image.twig" with {
+          variant: 'primary',
+          placeholder: false,
+          src: file_url('ws-assets://images/sample-image.png') ,
+        } %}
+      {% endblock %}
+      {% block button %}
+        {% include "@atoms/button/button.twig" with {
+          content: 'more',
+          variant: 'primary'
+        } %}
+      {% endblock %}
+      {% block more %}
+        <div class="w-full md:w-1/3 pr-2 mb-5">
+          {{ pattern_preview('card', 'default') }}
+        </div>
+        <div class="w-full md:w-1/3 px-2 mb-5">
+          {{ pattern_preview('card', 'default') }}
+        </div>
+        <div class="w-full md:w-1/3 pl-2 mb-5">
+          {{ pattern_preview('card', 'default') }}
+        </div>
+      {% endblock %}
+    {% endembed %}
   {% endblock %}
 </main>
 
 {% embed '@organisms/footer/footer.twig' %}
   {% block footer_menu %}
-    {% include '@molecules/menu/menu.twig' with {items: wingsuit.footer_menu.items, variant: 'footer'} %}
+    {% include '@molecules/menu/menu.twig' with {items: footer_menu.items, variant: 'footer'} %}
   {% endblock %}
 {% endembed %}
