--- a/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -12,14 +12,14 @@
     <div class="max-w-container px-4 m-auto">
       <div class="text-center w-1/2 m-auto pb-8 text-gray-dark">{{ "Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups." }}</div>
       <div class="block md:flex pt-10">
-        <div class="w-full md:w-1/3 pr-2">
-          {{ pattern_preview('card', 'rectangle') }}
+        <div class="w-full md:w-1/3 md:pr-2 mb-5">
+          {{ pattern_preview('card', 'default') }}
         </div>
-        <div class="w-full md:w-1/3 px-2">
-          {{ pattern_preview('card', 'circle') }}
+        <div class="w-full md:w-1/3 md:px-2 mb-5">
+          {{ pattern_preview('card', 'default') }}
         </div>
-        <div class="w-full md:w-1/3 pl-2">
-          {{ pattern_preview('card', 'rectangle') }}
+        <div class="w-full md:w-1/3 md:pl-2 mb-5">
+          {{ pattern_preview('card', 'default') }}
         </div>
       </div>
     </div>
