Add javascript attachments.

--- a/packages/cli/src/generators/component/templates/app/plain/pattern.stories.js.ejs
+++ b/packages/cli/src/generators/component/templates/app/plain/pattern.stories.js.ejs
@@ -1,8 +1,8 @@
 import React from 'react';
+import '<%= cleanPatternType %>/<%= name %>';
 import { RenderTwig } from '@wingsuit-designsystem/storybook';<% if (useDoc == 'mdx') { %>
 import mdx from '<%= cleanPatternType %>/<%= name %>/<%= name %>.mdx';
 <% } %>
-
 const <%= name %>Template = require('./<%= name %>.twig');
 
 export default {
