--- a/packages/cli/src/generators/component/templates/ds/base/index.js.ejs
+++ b/packages/cli/src/generators/component/templates/ds/base/index.js.ejs
@@ -1,24 +1,6 @@
 /**
  * <%= name %>
  */
-<% if (useCss) { %>
-
-// Module styles
-import './<%= name %>.css';
-<% } %><% if (useJavascriptHandler) { %>
-/**
- * Components may need to run clean-up tasks if they are removed from DOM.
- *
- */
-// eslint-disable-next-line no-unused-vars
-export function disable() {}
-
-/**
- * Each component has a chance to run when its enable function is called.
- *
- */
-export function enable() {
-}
-
-export default enable;
+<% if (useCss) { %>import './_<%= name %>.css';<% } %><% if (useJs) { %>
+import './_<%= name %>.behavior.js';
 <% } %>
