--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
@@ -21,7 +21,7 @@
 
     {% include "@atoms/svg/_svg--icon.twig" with {
       icon: svg,
-      size: {default: 'w-15', large: 'w-24'}[svg_size],
+      size: size,
       svg_classes: ['inline-block', 'align-middle', content|striptags ? 'ml-15', variant == 'outline' ? 'fill-red' : 'fill-white']
     } %}
   {% endif %}
