Add first cypress test.

--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
@@ -15,7 +15,7 @@
   variant == 'disabled' ? 'bg-disabled text-gray-xmedium',
   color,
 ] | sort | join(' ') | trim) }}>
-{{ content|striptags }}
+{{ content }}
   {% if svg is not empty %}
 
     {% include "@atoms/svg/_svg--icon.twig" with {
