--- a/examples/official-wingsuit/source/default/patterns/01-atoms/wsc/wsc.twig
+++ b/examples/official-wingsuit/source/default/patterns/01-atoms/wsc/wsc.twig
@@ -7,7 +7,7 @@
 {% endif %}
 {%- set content = content|render -%}
 <{{ element }} {{ attributes.addClass([
-  'px-4', 'py-2', 'leading-18', 'font-serif', 'uppercase', 'inline-block',
+  'wsc-component', 'px-4', 'py-2', 'leading-18', 'font-serif', 'uppercase', 'inline-block',
   variant == 'primary' ? 'bg-primary text-white',
   variant == 'secondary' ? 'bg-secondary text-white',
   variant == 'success' ? 'bg-success text-white',
