--- a/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/article/article.twig
@@ -1,8 +1,4 @@
-{% embed '@organisms/header/header.twig' %}
-  {% block menu %}
-    {% include '@molecules/menu/menu.twig' with {items: primary_menu.items, variant: 'primary'} %}
-  {% endblock %}
-{% endembed %}
+{{ pattern_preview('header') }}
 
 <main class="main-content w-full py-10 mt-20">
   {% block content %}
@@ -38,8 +34,4 @@
   {% endblock %}
 </main>
 
-{% embed '@organisms/footer/footer.twig' %}
-  {% block footer_menu %}
-    {% include '@molecules/menu/menu.twig' with {items: footer_menu.items, variant: 'footer'} %}
-  {% endblock %}
-{% endembed %}
+{{ pattern_preview('footer') }}
