--- a/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -1,11 +1,4 @@
-{# This pattern can be embedded directly by Drupal.
- # Overwrite the blocks and be happy.
- #}
-{% embed '@organisms/header/header.twig' %}
-  {% block menu %}
-    {% include '@molecules/menu/menu.twig' with {items: primary_menu.items, variant: 'primary'} %}
-  {% endblock %}
-{% endembed %}
+{{ pattern_preview('header') }}
 
 <main class="main-content w-full py-10 mt-20">
   {% block content %}
@@ -26,8 +19,4 @@
   {% endblock %}
 </main>
 
-{% embed '@organisms/footer/footer.twig' %}
-  {% block footer_menu %}
-    {% include '@molecules/menu/menu.twig' with {items: wingsuit.footer_menu.items, variant: 'footer'} %}
-  {% endblock %}
-{% endembed %}
+{{ pattern_preview('footer') }}
